--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             console.log('GGGGGGGGGG');
         }
     </script>
-    <div id="player" style="width: 50vw; height: 50vh;"></div>
+    <div id="player" style="width: 50vw; height: 50vh;position:relative"></div>
 <!--    <script src="dist/player.js"></script>-->
     <script src="dist/test.js"></script>
     <script>
