--- a/demo/index.html
+++ b/demo/index.html
@@ -3,22 +3,18 @@
 <head>
     <title>My Uploads</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="../dist/player.js"></script>
 </head>
 <body>
 <div id="login-container" class="pre-auth">
     This application requires access to your YouTube account.
     Please <a href="#" id="login-link">authorize</a> to continue.
 </div>
-<div id="playlists">Playlists:<span></span></div>
-<div id="video-container"></div>
-<div class="button-container">
-    <button id="prev-button" class="paging-button" onclick="previousPage();">Previous Page</button>
-    <button id="next-button" class="paging-button" onclick="nextPage();">Next Page</button>
-</div>
+<div id="playlists">Playlists:<span>Loading..</span></div>
+<div id="player" style="width: 600px;height:400px;"></div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script type="text/javascript" src="auth.js"></script>
 <script type="text/javascript" src="script.js"></script>
 <script src="https://apis.google.com/js/client.js?onload=googleApiClientReady"></script>
-<script src="../dist/player.js"></script>
 </body>
 </html>
