--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
     Please <a href="#" id="login-link">authorize</a> to continue.
 </div>
 <div id="playlists">Playlists:<span>Loading..</span></div>
-<div id="player" style="width: 600px;height:400px;"></div>
+<div id="player" style="width: 600px;height:400px;position:relative"></div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script type="text/javascript" src="auth.js"></script>
 <script type="text/javascript" src="script.js"></script>
