--- a/demo-fullscreen/index.html
+++ b/demo-fullscreen/index.html
@@ -7,13 +7,82 @@
         html, body {
             margin:0;
             padding: 0;
+            background: #000;
+        }
+
+        #logo {
+            width:30vw;
+            height: 22.87vw;
+            position:fixed;
+            bottom: 50%;
+            left: 50%;
+            margin-left: -15vw;
+            margin-bottom: -15vw;
+            z-index: 2;
+/*            -webkit-transition: all .5s ease-out;
+            -moz-transition: all .5s ease-out;
+            -ms-transition: all .5s ease-out;
+            -o-transition: all .5s ease-out;
+            transition: all .5s ease-out;*/
+/*            -webkit-box-shadow: 0px 0px 24px 5px rgba(0,0,0,0.75);
+            -moz-box-shadow: 0px 0px 24px 5px rgba(0,0,0,0.75);
+            box-shadow: 0px 0px 24px 5px rgba(0,0,0,0.75);*/
+        }
+
+        #logo.small {
+            margin:0;
+            width:10vw;
+            height: 7.62vw;
+            bottom: 20px;
+            left: 20px;
+        }
+
+        #logo .logo_bg {
+/*            width: 100%;
+            height: 100%;
+            background: #000;
+            opacity: 0.4;
+            position: absolute;
+            top:0;
+            left:0;*/
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top:0;
+            left:0;
+        }
+
+        #player {
+            width: 100vw;
+            height:100vh;
+            position:fixed;
+            top:0;
+            left:0
+        }
+
+        #modal {
+            display: none;
+            width: 100vw;
+            height: 100vh;
+            z-index: 1;
+            position: fixed;
+            top: 0;
+            left: 0;
         }
     </style>
     <script src="../dist/player.js"></script>
-    <script src="//code.jquery.com/jquery-2.2.1.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.2.1.min.js"></script>
 </head>
 <body>
-<div id="player" style="width: 100vw;height:100vh;position:relative;top:0;left:0"></div>
+<div id="logo">
+    <div class="logo_bg"></div>
+    <img src="4K-LOGO_WEB.png"/>
+</div>
+<div id="modal"></div>
+<div id="player"></div>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
