--- a/youtube.html
+++ b/youtube.html
@@ -13,7 +13,7 @@
     </script>
     <div id="player" style="width: 50vw; height: 50vh;position:relative"></div>
 <!--    <script src="dist/player.js"></script>-->
-    <script src="dist/test.js"></script>
+    <script src="dist/test_youtube.js"></script>
     <script>
 
     </script>
