--- a/htmlvideo.html
+++ b/htmlvideo.html
@@ -7,6 +7,12 @@
 <body>
 <div id="player" style="width: 50vw; height: 50vh;position:relative"></div>
 
+<!--
+<script src="dist/test_html.js"></script>
+-->
+<!--
+<script src="dist/test_theoplayer.js"></script>
+-->
 <script src="dist/test_html.js"></script>
 
 </body>
